增加清空按钮

--- a/style.css
+++ b/style.css
@@ -25,3 +25,10 @@ canvas{
     bottom: 4px;
     padding: 10px;
 }
+#wipe {
+    position: fixed;
+    left: 130px;
+    bottom: 4px;
+    padding: 10px;
+}
+
