--- a/style.css
+++ b/style.css
@@ -1,34 +1,97 @@
+.icon {
+    width: 2em; height: 2em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+    transition: all 0.20s ease-in-out;
+}
+
+svg:hover{
+    fill:green;
+    transform: scale(1.3);
+    transition: all 0.20s ease-in-out;
+}
+
 *{
     margin:0;
     padding:0;
 }
+
+ul {
+    list-style: none;
+}
+
 body{
     overscroll-behavior-y: contain;
     overscroll-behavior-x: none;
+    overflow: hidden;
 }
 
 canvas{
-    background: #c8c8c8;
+    background: #f0f0f0;
     display: block;
 }
 
 #eraser {
     position: fixed;
     left: 60px;
-    bottom: 4px;
+    bottom: 10px;
     padding: 10px;
 }
 
 #brush {
     position: fixed;
-    left: 4px;
-    bottom: 4px;
-    padding: 10px;
-}
-#wipe {
-    position: fixed;
-    left: 130px;
-    bottom: 4px;
+    left: 10px;
+    bottom: 10px;
     padding: 10px;
 }
 
+#eraser.active,
+#brush.active {
+    fill:green;
+    /* box-shadow: 0px 0px 5px 0px rgba(100,237,87,1); */
+    transform: scale(1.3);
+}
+
+#wipe {
+    position: fixed;
+    left: 10px;
+    top: 10px;
+    padding: 10px;
+}
+
+.colorPicker {
+    position: fixed;
+    top: 70px;
+    left: 21px;
+}
+
+.colorPicker li {
+    height: 28px;
+    width: 28px;
+    margin: 16px 0;
+    border-radius: 50%;
+    transition: all 0.2s ease-in-out;
+}
+
+.colorPicker li:hover {
+    transform: scale(1.2);
+}
+
+.colorPicker li.active {
+    box-shadow: 0 0 5px rgba(0,0,0,0.7);
+    transform: scale(1.2);
+    
+}
+
+#red{
+    background: red;
+}
+
+#green{
+    background: green;
+}
+
+#blue {
+    background: blue;
+}
