--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
 .icon {
     width: 2em; height: 2em;
+    padding: 10px;
     vertical-align: -0.15em;
     fill: currentColor;
     overflow: hidden;
     transition: all 0.20s ease-in-out;
 }
 
-svg:hover{
+svg:hover {
     fill:green;
     transform: scale(1.3);
     transition: all 0.20s ease-in-out;
 }
 
-*{
+* {
     margin:0;
     padding:0;
 }
 
-ul {
+ul, ol {
     list-style: none;
 }
 
-body{
+body {
     overscroll-behavior-y: contain;
     overscroll-behavior-x: none;
     overflow: hidden;
 }
 
-canvas{
+canvas {
     background: #f0f0f0;
     display: block;
 }
@@ -36,14 +37,13 @@ canvas{
     position: fixed;
     left: 60px;
     bottom: 10px;
-    padding: 10px;
+    
 }
 
 #brush {
     position: fixed;
     left: 10px;
     bottom: 10px;
-    padding: 10px;
 }
 
 #eraser.active,
@@ -53,11 +53,14 @@ canvas{
     transform: scale(1.3);
 }
 
+#wipe:visited{
+
+    transform: scale(1.0);
+}
 #wipe {
     position: fixed;
     left: 10px;
     top: 10px;
-    padding: 10px;
 }
 
 .colorPicker {
@@ -84,14 +87,56 @@ canvas{
     
 }
 
-#red{
+#black {
+    background: #000;
+}
+
+#red {
     background: red;
 }
 
 #green{
     background: green;
+    
 }
 
 #blue {
     background: blue;
+}
+
+#download {
+    position: fixed;
+    top: 10px;
+    left: 60px;
+}
+
+.lWidth {
+    position: fixed;
+    top:10px;
+    right: 10px;
+    padding: 10px;
+}
+
+.lWidth li {
+    margin: 0 10px;
+    display: inline-block;
+    height: 30px;
+    background: #000;
+    transition: all 0.3s ease-in-out;
+}
+
+.lWidth li:hover{
+    transform: scale(1.2)
+}
+
+.lWidth #thin {
+    width: 3px;
+}
+
+.lWidth #mid {
+    width: 4px;
+}
+
+.lWidth #thick {
+    width: 5px;
 }
